# windows-error-report-detector

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP_GUIDE.md  main.py  pyproject.toml  run_once.bat
src/: config.py  database.py  monitor.py  notification.py  windows.py
tests/: conftest.py  test_database.py  test_monitor.py  test_notification.py  test_watchdog.py  test_windows.py
