[project]
name = "windows-error-report-detection"
version = "0.1.0"
description = "Monitors Excel processes for stuck error dialogs and sends Microsoft Teams notifications"
requires-python = ">=3.10"
dependencies = [
    "psutil>=6.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
